fixed login and register screens
They were too narrow on lower resolutions

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -19,15 +19,15 @@ body {
   text-align: left;
 }
 
-.justify-content-center {
-  justify-content: center;
-}
-.justify-content-between {
-  justify-content: space-between;
-}
-.align-items-center {
-  align-items: center;
-}
+// .justify-content-center {
+//   justify-content: center;
+// }
+// .justify-content-between {
+//   justify-content: space-between;
+// }
+// .align-items-center {
+//   align-items: center;
+// }
 
 .my-1 {
   margin: 10px 0;
